cmake_minimum_required(VERSION 3.28)
project(325_sys_prog)

set(CMAKE_CXX_STANDARD 14)

include_directories("Prog 0")
include_directories("Prog 1")
include_directories("Prog 2")
include_directories("Prog 3")
include_directories("Prog 4")
include_directories("Prog 5")
include_directories("Prog 5++")
include_directories("Prog 6")
set(SOURCE_FILES "Prog 0/fibo.cpp" "Prog 1/war.cpp" "Prog 2/war.cpp" "Prog 3/generate.cpp" "Prog 3/mysort.cpp" "Prog 4/mysort.cpp" "Prog 5/bucketList.cpp" "Prog 5++/bucketList.cpp" "Prog 6/bigintTest.cpp")

add_executable(Prog0 "Prog 0/fibo.cpp")
add_executable(Prog1 "Prog 1/Card.cpp" "Prog 1/Card.h" "Prog 1/Deck.cpp" "Prog 1/Deck.h" "Prog 1/war.cpp")
add_executable(Prog2 "Prog 2/war.cpp")
add_executable(Prog3generate "Prog 3/generate.cpp")
add_executable(Prog3mysort "Prog 3/mysort.cpp")
add_executable(Prog4mysort "Prog 4/mysort.cpp")
add_executable(Prog5 "Prog 5/bucketList.cpp")
add_executable(Prog5++ "Prog 5++/bucketList.cpp")
add_executable(Prog6 "Prog 6/bigintTest.cpp")

